json map into seperate module