@@ -94,7 +94,6 @@
 	<properties>
 		<project.Automatic-Module-Name>com.github.nhojpatrick.cucumber.json</project.Automatic-Module-Name>
 		<project.surefire.argLine.jpms.module>--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.exceptions=org.junit.platform.commons
-			--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.map=org.junit.platform.commons
 			--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.transform.transformations=org.junit.platform.commons
 			--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.transform.utils=org.junit.platform.commons
 			--add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.transform=org.junit.platform.commons
